Add function to fix native library compression in APKs maybe fix